# FLAMEGPU2

./: .gitignore  .travis.yml  0.xml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  Doxyfile  Doxyfile.bak  FLAMEGPU2.sln  FLAMEGPU2.vcxproj  FLAMEGPU2.vcxproj.filters  FLAMEGPU2_dev.cbp  FLAMEGPU2_dev.layout  Jenkinsfile  LICENSE.md  Makefile  READ ME  README.dox  README.md  Simulation.cpp  Simulation.h  SimulationLayer.cpp  SimulationLayer.h  agents_log.csv  appveyor.yml  flame_api.h  flame_functions_api.h  flamegpu2.h  function.c  main.cpp  main.cu  main_MAS.cu  notes.txt  test_all.cpp  test_gpu_validation.cpp  test_gpu_validation.h  (+7 more)
examples/boids_bruteforce/: CMakeLists.txt
examples/boids_bruteforce/src/: main.cu
examples/boids_rtc_bruteforce/: CMakeLists.txt
examples/boids_rtc_bruteforce/src/: main.cu
examples/circles_spatial3D/: CMakeLists.txt
examples/circles_spatial3D/src/: main.cu
examples/sugarscape/: CMakeLists.txt
examples/sugarscape/src/: main.cu
src/: CMakeLists.txt  libflamegpu2.vcxproj  libflamegpu2.vcxproj.filters
src/flamegpu/detail/: JitifyCache.cu  TestSuiteTelemetry.cpp  compute_capability.cu  demangle.cpp  wddm.cu
src/flamegpu/exception/: FGPUDeviceException.cu  FGPUException.cpp  FLAMEGPUDeviceException.cu  FLAMEGPUException.cpp
src/flamegpu/gpu/: CUDAAgent.cu  CUDAAgentModel.cu  CUDAAgentStateList.cu  CUDAEnsemble.cu  CUDAFatAgent.cu  CUDAFatAgentStateList.cu  CUDAMacroEnvironment.cu  CUDAMessage.cu  CUDAMessageList.cu  CUDAScanCompaction.cu  CUDAScatter.cu  CUDASimulation.cu  CUDASubAgent.cu  CUDASubAgentStateList.cu
src/flamegpu/io/: JSONGraphReader.cpp  JSONGraphWriter.cpp  JSONLogger.cpp  JSONLogger.cu  JSONRunPlanReader.cpp  JSONRunPlanWriter.cpp  JSONSerializerReader.cpp  JSONSerializerWriter.cpp  JSONStateReader.cpp  JSONStateReader.cu  JSONStateWriter.cpp  JSONStateWriter.cu  ParaviewVTUWriter.cu  StateReader.cu  Telemetry.cpp  XMLLogger.cu  XMLStateReader.cpp  XMLStateReader.cu  XMLStateWriter.cpp  XMLStateWriter.cu  jsonLogger.cu  jsonReader.cpp  jsonWriter.cpp  xmlLogger.cu  xmlReader.cpp  xmlReader.cu  xmlWriter.cpp  xmlWriter.cu
src/flamegpu/model/: AgentData.cpp  AgentDescription.cpp  AgentDescription.cu  AgentFunctionData.cpp  AgentFunctionDependencyGraph.cpp  AgentFunctionDescription.cpp  AgentFunctionDescription.cu  AgentFunctionInput.cpp  AgentFunctionOutput.cpp  AgentStateDescription.cpp  DependencyGraph.cpp  DependencyNode.cpp  EnvironmentData.cpp  EnvironmentDescription.cpp  EnvironmentDescription.cu  EnvironmentDirectedGraphData.cu  EnvironmentDirectedGraphDescription.cu  HostFunctionDescription.cpp  LayerData.cpp  LayerDescription.cpp  MessageDescription.cpp  ModelData.cpp  ModelData.cu  ModelDescription.cpp  ModelDescription.cu  SubAgentData.cpp  SubAgentDescription.cpp  SubEnvironmentData.cpp  SubEnvironmentDescription.cpp  SubModelData.cpp  SubModelDescription.cpp
src/flamegpu/pop/: AgentInstance.cpp  AgentPopulation.cu  AgentStateMemory.cu  AgentVector.cpp  AgentVector_Agent.cpp  DeviceAgentVector_impl.cu
src/flamegpu/runtime/: HostAPI.cu  HostAgentAPI.cu  agent_function.cu  flamegpu_host_agent_api.cu  flamegpu_host_api.cu
src/flamegpu/sim/: AgentLoggingConfig.cu  LogFrame.cu  LoggingConfig.cu  RunPlan.cpp  RunPlanVec.cpp  RunPlanVector.cpp  SimLogger.cu  SimRunner.cu  Simulation.cu  SimulationLayer.cu
src/flamegpu/simulation/: AgentInstance.cpp  AgentLoggingConfig.cu  AgentVector.cpp  AgentVector_Agent.cpp  CUDAEnsemble.cu  CUDASimulation.cu  LogFrame.cu  LoggingConfig.cu  RunPlan.cpp  RunPlanVector.cpp  Simulation.cu
src/flamegpu/util/: Environment.cpp  JitifyCache.cu  cleanup.cu  compute_capability.cu
src/flamegpu/visualiser/: AgentStateVis.cpp  AgentVis.cpp  EnvironmentGraphVis.cpp  LineVis.cpp  ModelVis.cpp  PanelVis.cpp  StaticModelVis.cpp
swig/: CMakeLists.txt  test.sh
swig/conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
swig/conda/pyflamegpu/: meta.yaml
swig/conda/pyflamegpu_vis/: build.sh  meta.yaml
swig/python/: CMakeLists.txt  __init__.py.in  flamegpu.i  flamegpu2.i  setup.py.in  test.py
swig/python/codegen/: __init__.py  codegen.py
swig/r/: CMakeLists.txt  flamegpu.i
tests/: CMakeLists.txt  CMakeLists.txt.in  VS_test_gpu_validation.cu  VS_test_gpu_validation.h  VS_test_sim_validation.cu  VS_test_sim_validation.h  device_functions.cu  device_functions.h  device_test_functions.cu  pytest.ini  test_actor_random.h  test_agent_random.h  test_all.cpp  test_all.cu  test_func_pointer.cpp  test_func_pointer.cu  test_func_pointer.h  test_gpu_validation.h  test_message_validation.h  test_model_validation.h  test_pop_validation.h  test_rtcfunc_file  test_sim_validation.h  tests.vcxproj  tests.vcxproj.filters
tests/helpers/: common.h  device_initialisation.cu  device_initialisation.h  device_test_functions.cu  device_test_functions.h  host_reductions_common.cu  host_reductions_common.h  main.cu
tests/python/: conftest.py  test_mpi.py  venv.bat
tests/python/codegen/: codegen_example.py  test_codegen.py  test_codegen_integration.py
tests/python/detail/: test_jitify_cache.py
tests/python/io/: test_logging.py  test_logging_exceptions.py  test_telemetry.py
tests/python/model/: test_agent_function.py  test_dependency_graph.py  test_message.py  test_model.py
tests/python/runtime/: test_device_api.py
tests/python/simulation/: test_RunPlan.py  test_RunPlanVector.py  test_cuda_ensemble.py  test_cuda_simulation.py
tests/python/util/: test_cleanup.py  test_nvtx.py
tests/swig/: venv.bat
tests/swig/python/: conftest.py  test.py  test_version.py
tests/test_cases/: temp_nvhpc.cu  test_agent_array_variables.cu  test_version.cpp
tests/test_cases/detail/: test_CUDAEventTimer.cu  test_SteadyClockTimer.cpp  test_compute_capability.cu  test_cuda.cu  test_cxxname.cpp  test_dependency_versions.cu  test_multi_thread_device.cu  test_numeric.cpp  test_rtc_multi_thread_device.cu  test_wddm.cu
tests/test_cases/exception/: test_device_exception.cu  test_flamegpu_exception.cpp  test_rtc_device_exception.cu
(+914 files in other folders)
